feat(Ronny): logica de los 2 html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <main>
         <div class="container">
-            <h2>background colod: 
+            <h2>background color: 
                 <span class="color">
                     #f1f5f8
                 </span>
@@ -30,6 +30,6 @@
         </div>
     </main>
 
-    <script src="colorFlipper.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
