--- a/hex.html
+++ b/hex.html
@@ -6,6 +6,25 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <nav>
+        <div class="nav-center">
+            <h4>Color Flipper</h4>
+            <ul class="nav-links">
+                <li><a href="index.html">simple</a></li>
+                <li><a href="hex.html">hex</a></li>
+            </ul>
+        </div>
+    </nav>
+    <main>
+        <div class="container">
+            <h2>background color: 
+                <span class="color">
+                    #f1f5f8
+                </span>
+            </h2>
+            <button class="btn btnHero" id="btn">Click me</button>
+        </div>
+    </main>
+    <script src="hex.js"></script>
 </body>
 </html>
